# filtermail

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  dist-workspace.toml
.github/workflows/: ci.yml
src/: config.rs  error.rs  inbound.rs  main.rs  message.rs  openpgp.rs  outbound.rs  rate_limiter.rs  smtp_client.rs  smtp_server.rs  utils.rs
test_data/: asm.eml  encrypted.eml  fake-encrypted.eml  literal.eml  mdn.eml  plain.eml  securejoin-vc-fake.eml  securejoin-vc.eml
