[package]
name = "filtermail"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Chatmail Developers"]
description = "A mail filtering service used by chatmail relay"
repository = "https://github.com/chatmail/filtermail"

[features]
default = []
mimalloc = ["dep:mimalloc"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serini = "0.2.2"
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
mailparse = "0.16.1"
lettre = { version = "0.11.19", default-features = false, features = [
  "smtp-transport",
  "tokio1",
] }
log = "0.4.29"
env_logger = "0.11.8"
governor = "0.10.4"
mimalloc = { version = "0.1.48", optional = true }

[dev-dependencies]
rstest = "0.26.1"
testresult = "0.4.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
